# modded-nanogpt

./: .dockerignore  .gitignore  1run.sh  411327ae-c593-415e-ad87-ad816c7c0dbd.txt  821674f2-a926-4119-a466-a3de94ed0b20.txt  AGENTS.md  Dependabot.yml  Dockerfile  PLAN.md  README.md  RESULTS.md  SECURITY.md  SETUP_PLAN.md  Train Switch Dredge  bench_fp8_dot.py  benchmark.py  benchmark_esm.py  benchmark_esm2.py  calcs.py  config.py  coord_check.py  custom_trainer.py  dataloader_optimization_notes.md  dataloading.py  dc_triton_kernels.py  debug.py  env.txt  env.yaml  example_token_batching.py  exp.ipynb  fp8_attempts_log.md  github actions  inference.py  last_logs.txt  last_logs_euc_head_lr=0._k_0..txt  last_logs_hyp_head_lr=0._k_1..txt  last_logs_hyp_head_lr=0._k_100..txt  last_logs_hyp_head_lr=10._k_1..txt  last_logs_hyp_head_lr=10._k_100..txt  launch_multinode.sh  (+64 more)
H100_logs/: 853a600c-bb47-4820-bae8-3f0fe7347e30.txt  8e0c9104-9edb-448f-9839-b73531f42b2b.txt  c4269e29-8ed0-4d3a-879f-af490bc832cf.txt  cb6ad9b2-2c1e-4e86-b8e3-1c841a92c42a.txt  ea6a3f37-5397-4b13-a700-ac1404a14cb7.txt
_logs/: bias-3e010137-10fc-46f7-a68b-7649ff13cc7d.txt  bias-a82bdcb6-ea9d-4808-9e09-32b9901d21e1.txt  bias-f43dca01-62fd-4f97-9751-2e2ed21a69b8.txt  master-82de927d-20a6-422a-b45a-81de62bbfecc.txt  master-8ba61738-7464-4dc1-a9a9-ca222d2d62bb.txt
baseline_logs/: 1a29eee3-f606-4f8e-8f60-5b2d5aeebb7a.txt  29ddbd2c-1443-416e-9aa7-34e69f989078.txt  5e46fb81-c2ba-4df2-8a1c-ca142dfdac6f.txt  6c8d9cec-cb6a-45c7-97a3-75a55b50cdba.txt  720c5cb3-c87e-4a6a-81cc-21e7624d8b16.txt  (+3 more)
cuda/: newtonschulz5.py  (+6 more)
(+10004 files in other folders)
